--- a/EweForum/Views/Topic/View.cshtml
+++ b/EweForum/Views/Topic/View.cshtml
@@ -16,8 +16,9 @@
                             }
                         </h6>
                         <p class="card-text">@Model.Description</p>
-                                    <a href="@Url.Action("Edit","Topic",new{ topicId = Model.Id})" class="btn btn-primary regular-button blue pl-2">Go Back</a>
-                                    <a href="#" class="btn btn-primary regular-button blue">Refresh</a>
+                                       
+                                    <a href="@Url.Action("ManageTopics","Topic")" class="btn btn-primary regular-button blue pl-2">Go Back</a>
+                                    <a href="@Url.Action("View","Topic", new {topicId = Model.Id, page = 1})" class="btn btn-primary regular-button blue">Refresh</a>
                     </div>
                     <div class="card-footer text-muted">
                         Last Update: @Model.UpdatedOn
