Describe app functinality in privacy

--- a/EweForum/Views/Home/Index.cshtml
+++ b/EweForum/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h6 class="display-4">Welcome to EweForum</h6>
+    <p>Share, discuss and create</p>
+    <img src="/images/ufosheep.png"  width=500 height=490 alt="Responsive image">
 </div>
