Last fixes before deadline

--- a/EweForum/Views/Post/Create.cshtml
+++ b/EweForum/Views/Post/Create.cshtml
@@ -64,7 +64,7 @@
 				</div>
 				<div id="media" >
 					<div class="form-field">
-						<input asp-for="@Model.VideoTitle" class="form-input" type="url" placeholder="https://www.youtube.com/" />
+						<input asp-for="@Model.VideoTitle" class="form-input"  placeholder="Video Title" />
 					</div>
 					<div class="form-field"> 
 						<input asp-for="@Model.VideoUrl" class="form-input"  type="url" placeholder="https://www.youtube.com/" />
