--- a/EweForum/Views/Post/ViewReply.cshtml
+++ b/EweForum/Views/Post/ViewReply.cshtml
@@ -8,7 +8,7 @@
     else
     {
         <div class="card-collumns">
-            <h5 class="text-center text-muted mb-3">Original comment</h5>
+            <h5 class="text-muted mb-5">Original comment</h5>
             <div class="mt-2 card  border-info card-body p-3 w-50 original-card comment-card">
                 @ViewBag.Original.Content
                 <div class="d-flex flex-sm-column mt-2 w-100">
