--- a/EweForum/Views/Shared/Components/VideoPost/Default.cshtml
+++ b/EweForum/Views/Shared/Components/VideoPost/Default.cshtml
@@ -1,8 +1,8 @@
 ﻿@model ViewPostModelDetails
 <div>
-    <div class="card" style="width: 48rem;">
+    <div class="card mb-3" style="width: 48rem;">
         <div class="card-body">
-            <h5 class="card-title mb-3">@Model.VideoTitle</h5>
+            <h5 class="card-title ">@Model.VideoTitle</h5>
             @if (!Model.ShowDetailsButton)
             {
                 
